Fixed layout problems

--- a/src-frontend/src/app/login/login.component.css
+++ b/src-frontend/src/app/login/login.component.css
@@ -39,7 +39,7 @@ h6 span{
 .section{
   position: relative;
   width: 100%;
-  height: 90%;
+  height: 77.9%;
   display: block;
   color:rgb(0, 0, 0);
 }
