--- a/src-frontend/src/app/user-dashboard/user-dashboard.component.css
+++ b/src-frontend/src/app/user-dashboard/user-dashboard.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh;
+    height: 77.9%;
 }
 .container a {
     text-decoration: none;
